# lista-atracacao

./: Makefile  mkdocs.yml  pyproject.toml
.github/workfliws/: CI-CD.yml
.github/workflows/: CI-CD.yml
Lista/: source.py
Tests/: test_source.py
lista/: abctestando.py  source.py
tests/: test_abctestando.py  test_source.py
