[tool.poetry]
name = "lista-atracacao"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lista_atracacao"}]

[tool.poetry.dependencies]
python = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
blue = "^0.9.1"
isort = "^5.12.0"
mkdocs = "^1.4.3"
pip-audit = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
